Wed Feb 11 11:08:48 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/digest/digest_conf.rb (digest_conf): extract common
	  configurations.

Wed Feb 11 11:01:33 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/json/generator/generator.c (generate_json): get rid of
	  unnecessary recursive calls which can cause infinite recursion.
	  T_STRING may not have rb_cString.

Wed Feb 11 07:53:35 2015  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_word.rb: use skip method to skip test.

Tue Feb 10 11:38:28 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_insnhelper.c (vm_call_method): stop method search when a method
	  is not found in a refinement, to support undef in refinements.
	  [ruby-core:66741] [Bug #10578]

Tue Feb 10 11:19:11 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (chdir, delete, gettextfile, mdtm, mkdir, nlst,
	  putbinaryfile, puttextfile, rename, rmdir, size): support
	  Pathname. Patch by Joe Rafaniello. [fix GH-828]

Mon Feb  9 16:36:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/make-snapshot (package): get rid of loading unbundled and
	  unexpected libraries.  [ruby-core:67977] [Bug #10822]

Sun Feb  8 20:09:37 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/net/http/header.rb: pass header names as symbols.
	  Patch by @DamirSvrtan [fix GH-805]
	* test/net/http/test_httpheader.rb: added test.

Sun Feb  8 13:04:25 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/getaddrinfo.c (get_addr): reject too long hostname to
	  get rid of GHOST vulnerability on very old platforms.

	* ext/socket/raddrinfo.c (make_hostent_internal): ditto, paranoic
	  check for the canonical name.

Sun Feb  8 12:48:38 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/win32/lib/win32/registry.rb (Win32::Registry::API): use wide
	  versions of RegDeleteValue and RegDeleteKey.
	  [ruby-core:67958] [Bug #10820]

Sat Feb  7 22:13:08 2015  Masaki Suketa <masaki.suketa@nifty.ne.jp>
