@@ -8,6 +8,8 @@
 
 #define MD5_BLOCK_LENGTH	MD5_CBLOCK
 
-void MD5_Finish(MD5_CTX *pctx, unsigned char *digest);
+static DEFINE_FINISH_FUNC_FROM_FINAL(MD5);
+#undef MD5_Finish
+#define MD5_Finish rb_digest_MD5_finish
 
 #endif
