@@ -1,8 +1,0 @@
-/* $Id$ */
-
-#include "defs.h"
-#include "rmd160ossl.h"
-
-void RMD160_Finish(RMD160_CTX *ctx, char *buf) {
-	RIPEMD160_Final((unsigned char *)buf, ctx);
-}
