@@ -14,6 +14,7 @@
 #define RMD160_BLOCK_LENGTH		RIPEMD160_CBLOCK
 #define RMD160_DIGEST_LENGTH		RIPEMD160_DIGEST_LENGTH
 
-void RMD160_Finish(RMD160_CTX *ctx, char *buf);
+static DEFINE_FINISH_FUNC_FROM_FINAL(RIPEMD160)
+#define RMD160_Finish rb_digest_RIPEMD160_finish
 
 #endif
