@@ -1,4 +1,7 @@
-Wed Feb 11 11:08:48 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Wed Feb 11 11:09:21 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/digest/digest.h (DEFINE_FINISH_FUNC_FROM_FINAL): macro for
+	  finish functions, by inverting arguments order.
 
 	* ext/digest/digest_conf.rb (digest_conf): extract common
 	  configurations.
